--- a/portfolio/src/app/pages/landing/landing.component.html
+++ b/portfolio/src/app/pages/landing/landing.component.html
@@ -1,1 +1,21 @@
-<p>landing</p>
+<div class="title-container">
+  <h1>
+    <span>Hi! I'm Jason  |  Software Engineer  |  </span>
+    <span class="container-flip">
+      <span class="flip">Father</span>
+      <span class="flip">Student</span>
+      <span class="flip">Lego Builder</span>
+      <span class="flip">Laker Fan</span>
+      <span class="flip">Tinkerer</span>
+      <span class="flip">Gym Rat</span>
+      <span class="flip">Tech Enthusiast</span>
+      <span class="flip">Dodger Fan</span>
+    </span>
+  </h1>
+
+  <!-- <span class="spacer"></span> -->
+  <!-- <h4>
+    I am a creative developer and a life long learner. When I am not in the
+    office coding, you might catch me at the gym or playing with my kids.
+  </h4> -->
+</div>
