--- a/portfolio/src/app/pages/about/about.component.html
+++ b/portfolio/src/app/pages/about/about.component.html
@@ -1,1 +1,63 @@
-<p>about works!</p>
+<div class="section-container">
+  <h2>About me</h2>
+  <div class="card-container">
+    <mat-card class="image-container">
+      <img
+        mat-card-image
+        src="../../../assets/images/family.jpg"
+        alt="family"
+      />
+    </mat-card>
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <h3>A creative developer and life long learner</h3>
+        </mat-card-title>
+      </mat-card-header>
+
+      <mat-card-content>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
+          risus pretium quam vulputate dignissim suspendisse in est. Volutpat
+          consequat mauris nunc congue nisi vitae suscipit tellus mauris.
+          Tincidunt dui ut ornare lectus sit amet. Turpis massa sed elementum
+          tempus egestas. Et sollicitudin ac orci phasellus egestas tellus.
+          Dignissim suspendisse in est ante in. Volutpat diam ut venenatis
+          tellus in metus vulputate eu scelerisque. Pellentesque habitant morbi
+          tristique senectus et netus et malesuada. Lorem ipsum dolor sit amet
+          consectetur. Malesuada nunc vel risus commodo viverra maecenas
+          accumsan lacus. Placerat orci nulla pellentesque dignissim enim sit
+          amet venenatis. Urna porttitor rhoncus dolor purus non enim praesent
+          elementum facilisis.
+        </p>
+        <p>
+          Cras ornare arcu dui vivamus arcu felis. Id neque aliquam vestibulum
+          morbi blandit cursus. Lectus mauris ultrices eros in cursus turpis
+          massa. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae. Augue
+          lacus viverra vitae congue eu consequat ac. Id diam maecenas ultricies
+          mi eget mauris pharetra. Massa tincidunt dui ut ornare lectus sit amet
+          est. Ac tincidunt vitae semper quis lectus nulla. Mattis aliquam
+          faucibus purus in massa. Auctor elit sed vulputate mi sit amet mauris.
+          Lectus proin nibh nisl condimentum. Nam aliquam sem et tortor
+          consequat id porta. Pellentesque diam volutpat commodo sed egestas
+          egestas fringilla. Purus viverra accumsan in nisl nisi.
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <h2>My Skills</h2>
+  <mat-grid-list [cols]="numCols" rowHeight="100px">
+    <mat-grid-tile
+      *ngFor="let tile of tiles"
+      [colspan]="tile.cols"
+      [rowspan]="tile.rows"
+    >
+      <div class="tile-container">
+        <!-- <img [src]="tile.icon" alt="Skill icon" class="skill-icon" /> -->
+        <i [ngClass]="tile.icon" style="color: #319bc9"></i>
+        <p>{{ tile.text }}</p>
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
