--- a/portfolio/src/app/pages/toolbar/toolbar.component.html
+++ b/portfolio/src/app/pages/toolbar/toolbar.component.html
@@ -7,5 +7,5 @@
 <span class="spacer"></span>
 <landing id="targetHome"></landing>
 <about id="targetAbout"></about>
-<projects></projects>
+<projects id="targetProjects"></projects>
 <contact id="targetContact"></contact>
