--- a/portfolio/src/app/pages/landing/landing.component.html
+++ b/portfolio/src/app/pages/landing/landing.component.html
@@ -1,6 +1,7 @@
-<div class="title-container">
+<div class="title-container bg">
   <h1>
-    <span>Hi! I'm Jason  |  Software Engineer  |  </span>
+    <span class="name">Hi! I'm Jason | </span>
+    <span class="name">Software Engineer |</span>
     <span class="container-flip">
       <span class="flip">Father</span>
       <span class="flip">Student</span>
