--- a/portfolio/src/app/pages/contact/contact.component.html
+++ b/portfolio/src/app/pages/contact/contact.component.html
@@ -1,1 +1,43 @@
-<p>contact works!</p>
+<div class="section-container">
+  <h2>Contact</h2>
+  <p>Fill out the form below if you'd like to reach out</p>
+  <form
+    action="https://formkeep.com/f/d783731e1e47"
+    accept-charset="UTF-8"
+    enctype="multipart/form-data"
+    method="POST"
+  >
+    <mat-form-field>
+      <mat-label>Enter your name</mat-label>
+      <input matInput placeholder="Bob" required />
+      <!-- <mat-error *ngIf="name.invalid">{{ getErrorMessage('name') }}</mat-error> -->
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Enter your email</mat-label>
+      <input matInput placeholder="bob@mail.com" required />
+      <!-- <mat-error *ngIf="name.invalid">{{ getErrorMessage('email') }}</mat-error> -->
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Message</mat-label>
+      <textarea matInput required=""></textarea>
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit" id="submit">
+      Submit
+    </button>
+  </form>
+  <p>Or reach me on one of these platforms</p>
+  <div class="btn-container">
+    <a href="https://www.linkedin.com/in/jason-edman-140724241/" target="_blank"
+      ><i class="fa-brands fa-linkedin fa-2xl" style="color: #0077b5"></i
+    ></a>
+    <a href="https://github.com/jpe0824"
+      ><i class="fa-brands fa-github fa-2xl" style="color: #010432"></i
+    ></a>
+    <a href="mailto:jason.e24@gmail.com">
+      <i class="fa-regular fa-envelope fa-2xl" style="color: #ff4242"></i
+    ></a>
+    <a href="https://discordapp.com/users/691278886666895382"
+      ><i class="fa-brands fa-discord fa-2xl" style="color: #5865f2"></i
+    ></a>
+  </div>
+</div>
