FIX issues with word cycles

--- a/portfolio/src/app/pages/landing/landing.component.html
+++ b/portfolio/src/app/pages/landing/landing.component.html
@@ -1,9 +1,8 @@
 <div class="title-container bg">
-  <h1>
-    <span class="name">Hi! I'm Jason | </span>
-    <span class="name">Software Engineer |</span>
+  <h1 class="name">
+    Hi! I'm Jason | Software Engineer |
     <span class="container-flip">
-      <span class="flip">Father</span>
+      <span class="flip">Husband & Father</span>
       <span class="flip">Student</span>
       <span class="flip">Lego Builder</span>
       <span class="flip">Laker Fan</span>
@@ -13,10 +12,4 @@
       <span class="flip">Dodger Fan</span>
     </span>
   </h1>
-
-  <!-- <span class="spacer"></span> -->
-  <!-- <h4>
-    I am a creative developer and a life long learner. When I am not in the
-    office coding, you might catch me at the gym or playing with my kids.
-  </h4> -->
 </div>
