--- a/portfolio/src/app/pages/landing/landing.component.html
+++ b/portfolio/src/app/pages/landing/landing.component.html
@@ -5,11 +5,11 @@
       <span class="flip">Husband & Father</span>
       <span class="flip">Student</span>
       <span class="flip">Lego Builder</span>
-      <span class="flip">Laker Fan</span>
+      <span class="flip">Fitness Enthusiast</span>
+      <span class="flip">Lakers Fan</span>
       <span class="flip">Tinkerer</span>
-      <span class="flip">Gym Rat</span>
       <span class="flip">Tech Enthusiast</span>
-      <span class="flip">Dodger Fan</span>
+      <span class="flip">Dodgers Fan</span>
     </span>
   </h1>
 </div>
