--- a/portfolio/src/app/pages/landing/landing.component.scss
+++ b/portfolio/src/app/pages/landing/landing.component.scss
@@ -19,6 +19,7 @@
   flex-direction: column;
   justify-content: center;
   height: 80vh;
+  font-size: 16pt;
   .name {
     margin-left: 5vw;
     margin-right: 5vw;
