--- a/portfolio/src/app/pages/projects/projects.component.html
+++ b/portfolio/src/app/pages/projects/projects.component.html
@@ -1,19 +1,3 @@
-<!-- <div class="section-container">
-  <h2>Projects</h2>
-  <div class="project-container">
-    <div class="project-images">
-      <img
-        class="project-image"
-        [src]="project1Images[currentImageIndex1]"
-        alt="Project 1"
-        (click)="cycleProjectImage(1)"
-      />
-    </div>
-    <div class="project-description">
-      something
-    </div>
-  </div>
-</div> -->
 <div class="section-container">
   <h2>Projects</h2>
 
@@ -27,20 +11,53 @@
 
       <mat-card-content>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
-          risus pretium quam vulputate dignissim suspendisse in est. Volutpat
-          consequat mauris nunc congue nisi vitae suscipit tellus mauris.
-          Tincidunt dui ut ornare lectus sit amet. Turpis massa sed elementum
-          tempus egestas. Et sollicitudin ac orci phasellus egestas tellus.
-          Dignissim suspendisse in est ante in. Volutpat diam ut venenatis
-          tellus in metus vulputate eu scelerisque. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada. Lorem ipsum dolor sit amet
-          consectetur. Malesuada nunc vel risus commodo viverra maecenas
-          accumsan lacus. Placerat orci nulla pellentesque dignissim enim sit
-          amet venenatis. Urna porttitor rhoncus dolor purus non enim praesent
-          elementum facilisis.
+          OpenText is my full time job. My main responsibilities include
+          maintaining existing code as well as building new micro-service web
+          apps. About three months into the job I was tasked with leading the
+          UI/UX development of the project you see here. While I am limited in
+          what I can show, we provide access management services to thousands of
+          clients. I have worked hard to keep up with deadlines and complete my
+          tasks each sprint.
         </p>
+        <p>
+          Other than creating new services I also work on replacing legacy UI.
+          Some of the code has been around for 20+ years so it is very important
+          to keep things looking good, and more importantly, secure. I work well
+          with others and have good communications with my team here in Utah and
+          across the globe.
+        </p>
+        <p>
+          Most of my experience has come from this position and I have learned
+          many technologies.
+        </p>
+        <p>Skills used here:</p>
+        <mat-chip-listbox aria-label="Skills">
+          <mat-chip>Angular</mat-chip>
+          <mat-chip>Typescript</mat-chip>
+          <mat-chip>Java</mat-chip>
+          <mat-chip>SCSS</mat-chip>
+          <mat-chip>XML</mat-chip>
+          <mat-chip>HTML</mat-chip>
+          <mat-chip>Docker</mat-chip>
+          <mat-chip>Postman</mat-chip>
+          <mat-chip>Git</mat-chip>
+          <mat-chip>Github</mat-chip>
+          <mat-chip>RESTful api's</mat-chip>
+          <mat-chip>Linux</mat-chip>
+          <mat-chip>Moba Xterm</mat-chip>
+          <mat-chip>Agile</mat-chip>
+          <mat-chip>Scripting</mat-chip>
+          <mat-chip>UX-Aspects</mat-chip>
+        </mat-chip-listbox>
+        <mat-card-footer>
+          <a
+            mat-stroked-button
+            href="https://www.opentext.com/products/identity-and-access-management"
+            target="_blank"
+            color="primary"
+            >View IAM Projects</a
+          >
+        </mat-card-footer>
       </mat-card-content>
     </mat-card>
     <mat-card class="image-container">
@@ -72,20 +89,54 @@
 
       <mat-card-content>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
-          risus pretium quam vulputate dignissim suspendisse in est. Volutpat
-          consequat mauris nunc congue nisi vitae suscipit tellus mauris.
-          Tincidunt dui ut ornare lectus sit amet. Turpis massa sed elementum
-          tempus egestas. Et sollicitudin ac orci phasellus egestas tellus.
-          Dignissim suspendisse in est ante in. Volutpat diam ut venenatis
-          tellus in metus vulputate eu scelerisque. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada. Lorem ipsum dolor sit amet
-          consectetur. Malesuada nunc vel risus commodo viverra maecenas
-          accumsan lacus. Placerat orci nulla pellentesque dignissim enim sit
-          amet venenatis. Urna porttitor rhoncus dolor purus non enim praesent
-          elementum facilisis.
+          Mama Bear's Preschool is a small business located in my hometown, Rock
+          Springs, WY. I volunteered to build the site as it was mutually
+          beneficial for the business and my own learning.
         </p>
+        <p>
+          This website has been one of my favorite projects to work on. The
+          first iteration was created almost two years ago. It consisted of
+          vanilla everything. No knock on vanilla either. It wasn't fantastic
+          but it was my first crack at anything in the front end. It was a lot
+          of fun.
+        </p>
+        <p>
+          Over time as my skills have improved, so too has this site. I have
+          refactored the site to look and perform better, and all around has
+          been great experience for me. Now that I have gotten very comfortable
+          in the front-end I am currently working on implementing a full backend
+          as well. I plan on including some admin settings and tying in a
+          database.
+        </p>
+        <p>Skills used here:</p>
+        <mat-chip-listbox aria-label="Skills">
+          <mat-chip>Angular</mat-chip>
+          <mat-chip>Typescript</mat-chip>
+          <mat-chip>SCSS</mat-chip>
+          <mat-chip>HTML</mat-chip>
+          <mat-chip>Git</mat-chip>
+          <mat-chip>Github</mat-chip>
+          <mat-chip>Bootstrap</mat-chip>
+          <mat-chip>Formkeep</mat-chip>
+          <mat-chip>Netlify</mat-chip>
+          <mat-chip>CI/CD</mat-chip>
+        </mat-chip-listbox>
+        <mat-card-footer>
+          <a
+            mat-stroked-button
+            href="https://www.mamabearspreschool.com"
+            target="_blank"
+            color="primary"
+            >View Site</a
+          >
+          <a
+            mat-stroked-button
+            href="https://github.com/jpe0824/mamaBearsAngular"
+            target="_blank"
+            color="primary"
+            >View Repo</a
+          >
+        </mat-card-footer>
       </mat-card-content>
     </mat-card>
   </div>
@@ -99,20 +150,54 @@
 
       <mat-card-content>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
-          risus pretium quam vulputate dignissim suspendisse in est. Volutpat
-          consequat mauris nunc congue nisi vitae suscipit tellus mauris.
-          Tincidunt dui ut ornare lectus sit amet. Turpis massa sed elementum
-          tempus egestas. Et sollicitudin ac orci phasellus egestas tellus.
-          Dignissim suspendisse in est ante in. Volutpat diam ut venenatis
-          tellus in metus vulputate eu scelerisque. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada. Lorem ipsum dolor sit amet
-          consectetur. Malesuada nunc vel risus commodo viverra maecenas
-          accumsan lacus. Placerat orci nulla pellentesque dignissim enim sit
-          amet venenatis. Urna porttitor rhoncus dolor purus non enim praesent
-          elementum facilisis.
+          This is another site I have volunteered to build. The site itself is
+          more of an informational site. It is meant to display information and
+          send RSVP information to the site's owner.
         </p>
+        <p>
+          None of the technologies used in this site were new to me at the time
+          so I wanted to challenge myself to make something more responsive.
+          Something that looked really good on mobile since that is where a
+          majority of users would be accessing it. This was another great
+          learning experience.
+        </p>
+        <p>
+          I also focused on utilizing the power of components to make things as
+          re-usable as possible. The site owner might need to make changes to
+          the information over time so I wanted to make this a seamless process
+          to save time in the future. I made re-useable components and made sure
+          not to repeat my code when possible.
+        </p>
+        <p>Skills used here:</p>
+        <mat-chip-listbox aria-label="Skills">
+          <mat-chip>Angular</mat-chip>
+          <mat-chip>Typescript</mat-chip>
+          <mat-chip>SCSS</mat-chip>
+          <mat-chip>HTML</mat-chip>
+          <mat-chip>Git</mat-chip>
+          <mat-chip>Github</mat-chip>
+          <mat-chip>Bootstrap</mat-chip>
+          <mat-chip>GetForm.IO</mat-chip>
+          <mat-chip>Netlify</mat-chip>
+          <mat-chip>CI/CD</mat-chip>
+          <mat-chip>Responsive Design</mat-chip>
+        </mat-chip-listbox>
+        <mat-card-footer>
+          <a
+            mat-stroked-button
+            href="http://meldrumreunion.com"
+            target="_blank"
+            color="primary"
+            >View Site</a
+          >
+          <a
+            mat-stroked-button
+            href="https://github.com/jpe0824/reunion-app"
+            target="_blank"
+            color="primary"
+            >View Repo</a
+          >
+        </mat-card-footer>
       </mat-card-content>
     </mat-card>
     <mat-card class="image-container">
@@ -144,21 +229,58 @@
 
       <mat-card-content>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
-          risus pretium quam vulputate dignissim suspendisse in est. Volutpat
-          consequat mauris nunc congue nisi vitae suscipit tellus mauris.
-          Tincidunt dui ut ornare lectus sit amet. Turpis massa sed elementum
-          tempus egestas. Et sollicitudin ac orci phasellus egestas tellus.
-          Dignissim suspendisse in est ante in. Volutpat diam ut venenatis
-          tellus in metus vulputate eu scelerisque. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada. Lorem ipsum dolor sit amet
-          consectetur. Malesuada nunc vel risus commodo viverra maecenas
-          accumsan lacus. Placerat orci nulla pellentesque dignissim enim sit
-          amet venenatis. Urna porttitor rhoncus dolor purus non enim praesent
-          elementum facilisis.
+          This app is a simple web app I created to keep track of stock prices.
+          The app itself uses local storage to save your stocks. It uses an API
+          to fetch and display the different stocks.
         </p>
+        <p>
+          While there are obviously better options out there to keep track of
+          investments I wanted to prove my skills in React. I get to improve my
+          Angular skills every day with my job but I wanted to broaden my
+          framework knowledge. I quickly grasped React's concepts and built a
+          fun app over just a couple of days.
+        </p>
+        <p>
+          Currently the site remains a bit of a React playground. I plan on
+          expanding on this project by building a small backend that can use a
+          database instead of relying on local storage. On top of that I want to
+          use this site to explore some more open-source resources and really
+          take advantage of what can be done with open-source projects.
+        </p>
+        <p>Skills used here:</p>
+        <mat-chip-listbox aria-label="Skills">
+          <mat-chip>React</mat-chip>
+          <mat-chip>TSX</mat-chip>
+          <mat-chip>SCSS</mat-chip>
+          <mat-chip>HTML</mat-chip>
+          <mat-chip>Git</mat-chip>
+          <mat-chip>Github</mat-chip>
+          <mat-chip>Netlify</mat-chip>
+          <mat-chip>CI/CD</mat-chip>
+          <mat-chip>States</mat-chip>
+          <mat-chip>API Integration</mat-chip>
+          <mat-chip>Open-source</mat-chip>
+        </mat-chip-listbox>
+        <mat-card-footer>
+          <a
+            mat-stroked-button
+            href="https://tckrstats.netlify.app/"
+            target="_blank"
+            color="primary"
+            >View Site</a
+          >
+          <a
+            mat-stroked-button
+            href="https://github.com/jpe0824/reactApp/tree/main"
+            target="_blank"
+            color="primary"
+            >View Repo</a
+          >
+        </mat-card-footer>
       </mat-card-content>
     </mat-card>
+    <a href="https://github.com/jpe0824" target="_blank" mat-button
+      >See more of my work on my Github</a
+    >
   </div>
 </div>
