--- a/portfolio/src/app/pages/about/about.component.html
+++ b/portfolio/src/app/pages/about/about.component.html
@@ -11,7 +11,7 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>
-          <h3>A creative developer and life long learner</h3>
+          <h3>A creative developer and life-long learner</h3>
         </mat-card-title>
       </mat-card-header>
 
