--- a/portfolio/src/app/pages/about/about.component.scss
+++ b/portfolio/src/app/pages/about/about.component.scss
@@ -5,7 +5,7 @@ img {
 }
 
 .image-container {
-  max-width: 300px;
+  max-width: 450px;
 }
 
 .card-container {
@@ -28,6 +28,6 @@ img {
 @media (max-width: 767px) {
   .card-container {
     flex-direction: column;
-    max-width: 300px;
+    max-width: 100vw;
   }
 }
