--- a/portfolio/src/app/pages/projects/projects.component.scss
+++ b/portfolio/src/app/pages/projects/projects.component.scss
@@ -19,3 +19,9 @@ img.project-image {
     flex: 1 1 100%; /* Full width on mobile */
   }
 }
+
+a {
+  margin-top: 20px;
+  margin-right: 5px;
+  text-decoration: none;
+}
