--- a/portfolio/src/app/pages/about/about.component.html
+++ b/portfolio/src/app/pages/about/about.component.html
@@ -11,17 +11,13 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>
-          <h3>A creative developer and life-long learner</h3>
+          <h3>Creative developer and life-long learner</h3>
         </mat-card-title>
       </mat-card-header>
 
       <mat-card-content>
-        <p>
-
-        </p>
-        <p>
-          
-        </p>
+        <p></p>
+        <p></p>
       </mat-card-content>
     </mat-card>
   </div>
@@ -34,7 +30,7 @@
     >
       <div class="tile-container">
         <!-- <img [src]="tile.icon" alt="Skill icon" class="skill-icon" /> -->
-        <i [ngClass]=" tile.icon" style="color: #319bc9"></i>
+        <i [ngClass]="tile.icon" style="color: #319bc9"></i>
         <p>{{ tile.text }}</p>
       </div>
     </mat-grid-tile>
