updated about section

--- a/portfolio/src/app/pages/about/about.component.html
+++ b/portfolio/src/app/pages/about/about.component.html
@@ -8,40 +8,57 @@
         alt="family"
       />
     </mat-card>
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>Creative developer and life-long learner</h3>
-        </mat-card-title>
-      </mat-card-header>
-
+    <mat-card class="about-card">
       <mat-card-content>
+        <h3>Creative developer and life-long learner</h3>
+
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed sed
-          risus pretium quam vulputate dignissim suspendisse in est. Volutpat
-          consequat mauris nunc congue nisi vitae suscipit tellus mauris.
-          Tincidunt dui ut ornare lectus sit amet. Turpis massa sed elementum
-          tempus egestas. Et sollicitudin ac orci phasellus egestas tellus.
-          Dignissim suspendisse in est ante in. Volutpat diam ut venenatis
-          tellus in metus vulputate eu scelerisque. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada. Lorem ipsum dolor sit amet
-          consectetur. Malesuada nunc vel risus commodo viverra maecenas
-          accumsan lacus. Placerat orci nulla pellentesque dignissim enim sit
-          amet venenatis. Urna porttitor rhoncus dolor purus non enim praesent
-          elementum facilisis.
+          I have always loved tech and making things. When I was younger it came
+          in the form of video games like minecraft or some city builder or even
+          Legos. Building in a digital space came naturally. A few years into a
+          sales career and some un-forseen global events, (*cough) I started to
+          play around with computer programming. I was instantly hooked. I
+          started classes right away and haven't really looked back since.
         </p>
         <p>
-          Cras ornare arcu dui vivamus arcu felis. Id neque aliquam vestibulum
-          morbi blandit cursus. Lectus mauris ultrices eros in cursus turpis
-          massa. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae. Augue
-          lacus viverra vitae congue eu consequat ac. Id diam maecenas ultricies
-          mi eget mauris pharetra. Massa tincidunt dui ut ornare lectus sit amet
-          est. Ac tincidunt vitae semper quis lectus nulla. Mattis aliquam
-          faucibus purus in massa. Auctor elit sed vulputate mi sit amet mauris.
-          Lectus proin nibh nisl condimentum. Nam aliquam sem et tortor
-          consequat id porta. Pellentesque diam volutpat commodo sed egestas
-          egestas fringilla. Purus viverra accumsan in nisl nisi.
+          Since then I have been focused on completing my degree and
+          contributing as a developer. My current position has taught me a lot
+          in the front end and I am currently sharpening my skills to work as a
+          full stack dev.
+        </p>
+        <h4>As a developer</h4>
+        <p>
+          I pride myself in putting the best code forward. I take time to ensure
+          my code is <b>readable</b> and <b>maintainable</b>. I am always
+          willing to take feedback and use that to improve my skills.
+        </p>
+        <p>
+          I am always excited to start a new project. I look to learn something
+          new and am happy to lead the way when needed.
+        </p>
+        <h4>As a colleague</h4>
+        <p>
+          Communication is key. With my background in sales I have learned to
+          communicate with <b>every</b> type of person. I am always happy to
+          voice my opinion or welcome others' as well.
+        </p>
+        <p>
+          I am a team player and happy to help my peers when needed. I prefer to
+          go into what I call <em>code mode</em> (blast music for a couple hours
+          and vigorously type away) but when needed, jumping on a call to break
+          down a complicated problem can be just as fun.
+        </p>
+        <h4>As a person</h4>
+        <p>
+          Work life balance is very important to me. One of the things that
+          gravitated me to this career was just that. When doing sales I often
+          found myself burned out and performing sub-optimally in my work and
+          life.
+        </p>
+        <p>
+          I make sure to take time for my family and myself. It puts me in a
+          great place mentally and because of that I am able to produce and
+          out-perform expectations.
         </p>
       </mat-card-content>
     </mat-card>
